--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 //*  Version : $Header:$
 //*
 //*
-//*  Purpose : 
+//*  Purpose : Wolery Core Libraries for Scala.
 //*
 //*
 //*  Comments: This file uses a tab size of 2 spaces.
@@ -25,12 +25,12 @@
     <relativePath>../pom/pom.xml</relativePath>
   </parent>
 
-  <artifactId>utl</artifactId>
+  <artifactId>nest</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Utl</name>
-  <description></description>
+  <name>Nest</name>
+  <description>Wolery Core Libraries for Scala</description>
   <url>https://github.com/wolery/utl</url>
   <inceptionYear>January 2018</inceptionYear>
 
