--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.scalacheck</groupId>
-      <artifactId>scalacheck_${scala.binary.version}</artifactId>
+      <groupId>org.scalatestplus</groupId>
+      <artifactId>scalacheck-1-15_${scala.binary.version}</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
